--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.0.1",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.2.11",
+    "vuetify-confirm": "^2.0.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -22,7 +27,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
